--- a/hoop/UI/Base.lproj/Main.storyboard
+++ b/hoop/UI/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
         <!--Tutorial View Controller-->
         <scene sceneID="BkI-wX-mB4">
             <objects>
-                <viewController id="3iX-jS-29G" customClass="TutorialViewController" customModule="hoop" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TutorialViewController" id="3iX-jS-29G" customClass="TutorialViewController" customModule="hoop" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="UVA-pU-fvR">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -35,11 +35,20 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AYB-UJ-gi7">
+                                <rect key="frame" x="192" y="824" width="30" height="30"/>
+                                <state key="normal" title="skip"/>
+                                <connections>
+                                    <action selector="skipAction:" destination="3iX-jS-29G" eventType="touchUpInside" id="EBp-yf-Dbz"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="RYf-XL-Xcq" firstAttribute="centerX" secondItem="UVA-pU-fvR" secondAttribute="centerX" id="PVj-OK-J9E"/>
+                            <constraint firstItem="AYB-UJ-gi7" firstAttribute="bottom" secondItem="Yc8-a3-DMk" secondAttribute="bottom" constant="-8" id="UQx-zk-wWl"/>
                             <constraint firstItem="RYf-XL-Xcq" firstAttribute="centerY" secondItem="UVA-pU-fvR" secondAttribute="centerY" id="XNR-bG-EEO"/>
+                            <constraint firstItem="AYB-UJ-gi7" firstAttribute="centerX" secondItem="UVA-pU-fvR" secondAttribute="centerX" id="dXO-yf-bQe"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Yc8-a3-DMk"/>
                     </view>
@@ -288,27 +297,7 @@
         <!--Parameters View Controller-->
         <scene sceneID="F0Q-dU-XDn">
             <objects>
-                <tableViewController storyboardIdentifier="ParametersViewController" id="6Pn-iv-W4d" customClass="ParametersViewController" customModule="hoop" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="wmj-60-vGZ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="c34-Bb-Ijy">
-                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="c34-Bb-Ijy" id="x4Z-wG-fRx">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="6Pn-iv-W4d" id="xHp-oY-edF"/>
-                            <outlet property="delegate" destination="6Pn-iv-W4d" id="hoA-7U-InW"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
+                <tableViewController storyboardIdentifier="ParametersViewController" id="6Pn-iv-W4d" customClass="ParametersViewController" customModule="hoop" customModuleProvider="target" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hrL-ld-HEo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1645" y="27"/>
@@ -316,7 +305,7 @@
         <!--Map View Controller-->
         <scene sceneID="44c-Gx-dIJ">
             <objects>
-                <viewController storyboardIdentifier="MapViewController" id="jFe-Ul-LRg" customClass="MapViewController" customModule="uxTests" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MapViewController" id="jFe-Ul-LRg" customClass="MapViewController" customModule="hoop" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LPR-el-S35">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -324,7 +313,7 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="wjd-2r-Imj">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="462"/>
                             </mapView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rVf-Zs-COc" userLabel="HoopBackground" customClass="UIGradientView" customModule="uxTests" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rVf-Zs-COc" userLabel="HoopBackground" customClass="UIGradientView" customModule="hoop" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="462" width="414" height="434"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="string" keyPath="heroID" value="HoopBackgroundId"/>
@@ -469,12 +458,12 @@
         <!--Profile View Controller-->
         <scene sceneID="wDw-68-WbZ">
             <objects>
-                <viewController storyboardIdentifier="ProfileViewController" id="1Hv-qa-SDP" customClass="ProfileViewController" customModule="uxTests" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ProfileViewController" id="1Hv-qa-SDP" customClass="ProfileViewController" customModule="hoop" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="SPj-je-lS0">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aIL-4d-q6m" userLabel="HoopBackground" customClass="UIGradientView" customModule="uxTests" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aIL-4d-q6m" userLabel="HoopBackground" customClass="UIGradientView" customModule="hoop" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="44" width="414" height="852"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="string" keyPath="heroID" value="HoopBackgroundId"/>
